--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,28 @@
-@import "tailwindcss";
+@charset "UTF-8";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --white: #ffffff;
+  --black: #1b1b1b;
+  --gray: #79747E;
+  --red: #FF472E;
+  --orange: #FF7C1D;
+  --yellow: #ffc23d;
+  --green: #00ac07;
+  --blue: #0085FF;
+  --navy: #000080;
+  --purple: #A020F0;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
+html,
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: '';
 }
